openmediavault (7.6.0-1) stable; urgency=low

  * Add option to disable the automatic installation of security
    updates.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Jan 2025 15:18:02 +0100

openmediavault (7.5.2-1) stable; urgency=low

  * Update locale files.
  * Fix database migration issue introduced by issue #1875.
  * Issue #1898: When IPv6 is deactivated, the environment
    variable OMV_NGINX_SITE_WEBGUI_LISTEN_IPV4_ADDRESS isn't
    taken into account when deploying the nginx configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Jan 2025 15:18:02 +0100

openmediavault (7.5.1-1) stable; urgency=low

  * Improve the quick disk wiping feature. Increase the amount of data
    wiped at the head and tail of the device from 4 to 10 MiB to ensure
    that all metadata/signatures are removed.
  * Issue #1890: Improve parsing of the SMART attribute flags
    field. This will fix the display of the temperature for
    some devices.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 10 Jan 2025 14:20:09 +0100

openmediavault (7.5.0-1) stable; urgency=low

  * Try to prevent connection errors when installing plugins
    or package updates via UI.
  * Issue #1875: Add option to select the Wi-Fi frequency band.
  * Issue #1878: Fix netplan config parsing errors.
  * Issue #1883: Modify the hint for the extended attributes
    setting in the SMB share form. Enable them by default.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 Dec 2024 13:10:58 +0100

openmediavault (7.4.17-2) stable; urgency=low

  * Fix a translation problem with several form fields.
  * Add the `Follow symlinks` and `Wide links` options to SMB shares
    and home directories.
  * Fix usage threshold render issue in datatable progress bars.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 16 Dec 2024 09:36:39 +0100

openmediavault (7.4.16-1) stable; urgency=low

  * Several improvements.
