@@ -26,5 +26,6 @@
         ]
       }
     }
-  ]
+  ],
+  "navigationRequestStrategy": "freshness"
 }
